--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,16 +1,24 @@
 #!groovy
+Jenkinsfile (Declarative Pipeline)
+
+# https://jenkins.io/doc/pipeline/tour/post/
+# https://jenkins.io/doc/book/pipeline/jenkinsfile/
+
 
 pipeline {
     agent any
+    environment {
+        ENV = 'PROD'
+    }
     stages {
         stage('Build') {
             steps {
                 timeout(time: 3, unit: 'MINUTES') {
                     retry(5) {
-                        sh 'mkdir -p /home/vagrant/ && cd /home/vagrant && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
-                        sh 'bash /home/vagrant/jenkins-docker-nginx/scripts/install_utilites.sh'
+                        sh 'cd ~ && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
+                        sh 'bash ~/jenkins-docker-nginx/scripts/install_utilites.sh'
                         sh '''
-                            bash /home/vagrant/jenkins-docker-nginx/scripts/install_nginx_lua.sh
+                            bash ~/jenkins-docker-nginx/scripts/install_nginx_lua.sh
                         '''
                     }
                 }
@@ -20,8 +28,8 @@ pipeline {
             steps {
                 retry(3) {
                     sh '''
-                        cd /home/vagrant && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
-                        time docker build -t centos7/nginx_lua -f /home/vagrant/jenkins-docker-nginx/docker/Dockerfile .
+                        cd ~ && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
+                        time docker build -t centos7/nginx_lua -f ~/jenkins-docker-nginx/docker/Dockerfile .
                         export DOCKER_ID_USER="captainua"
                         docker login -u $DOCKER_ID_USER
                         docker tag centos7/nginx_lua $DOCKER_ID_USER/nginx_lua
@@ -30,8 +38,8 @@ pipeline {
                 }
 
                 timeout(time: 3, unit: 'MINUTES') {
-                    sh 'mkdir -p /home/vagrant/ && cd /home/vagrant && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
-                    sh 'bash /home/vagrant/jenkins-docker-nginx/scripts/install_utilites.sh'
+                    sh 'cd ~ && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
+                    sh 'bash ~/jenkins-docker-nginx/scripts/install_utilites.sh'
                 }
             }
         }
@@ -40,8 +48,9 @@ pipeline {
                 timeout(time: 3, unit: 'MINUTES') {
                     retry(5) {
                         sh '''
-                            mkdir -p /home/vagrant/ && cd /home/vagrant && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git
-                            bash /home/vagrant/jenkins-docker-nginx/scripts/install_utilites.sh
+                            cd ~ && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git
+                            bash ~/jenkins-docker-nginx/scripts/install_utilites.sh
+                            # bash ~/jenkins-docker-nginx/scripts/create_aws_node.sh
                             export ACCESS_KEY="XXXXXXXXXX"
                             export SECRET_KEY="YYYYYYYYYY"
                             docker-machine create --driver amazonec2 --amazonec2-access-key $ACCESS_KEY --amazonec2-secret-key $SECRET_KEY  --amazonec2-open-port 80 --amazonec2-open-port 443 aws-nginx-lua
