--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
             steps {
                 timeout(time: 3, unit: 'MINUTES') {
                     retry(5) {
-                        sh 'cd ~'
+                        sh 'cd ~ && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
                         sh 'bash ~/jenkins-docker-nginx/scripts/install_utilites.sh'
                         sh '''
                             bash ~/jenkins-docker-nginx/scripts/install_nginx_lua.sh
@@ -23,7 +23,7 @@ pipeline {
             steps {
                 retry(3) {
                     sh '''
-                        cd ~
+                        cd ~ && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
                         time docker build -t centos7/nginx_lua -f ~/jenkins-docker-nginx/docker/Dockerfile .
                         export DOCKER_ID_USER="captainua"
                         docker login -u $DOCKER_ID_USER
@@ -33,7 +33,7 @@ pipeline {
                 }
 
                 timeout(time: 3, unit: 'MINUTES') {
-                    sh 'cd ~'
+                    sh 'cd ~ && git clone https://github.com/SebastianUA/jenkins-docker-nginx.git'
                     sh 'bash ~/jenkins-docker-nginx/scripts/install_utilites.sh'
                 }
             }
