--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
                     retry(5) {
                         sh '''
                         cd ~
-                        if [ -d "~/jenkins-docker-nginx" ]; then
+                        if [ -d '~/jenkins-docker-nginx' ]; then
                             git clone https://github.com/SebastianUA/jenkins-docker-nginx.git
                         fi
                         bash ~/jenkins-docker-nginx/scripts/install_utilites.sh
